--- a/src/app/registerngo/registern-ngo.component.html
+++ b/src/app/registerngo/registern-ngo.component.html
@@ -6,46 +6,57 @@
 
                 <div class="signup-form">
                     <h2 class="form-title">Register as a NGO </h2>
-                    <form method="POST" class="register-form" id="register-form" action="">
+                    <form class="register-form" id="register-form" [formGroup]="formregisterngo">
 
                         <div class="form-group">
                             <label for="your_name"><i class="zmdi zmdi-account "></i></label>
-                            <input type="text" name="your_name" id="your_name" placeholder="Your Name"/>
+                            <input type="text" name="your_name" id="your_name" placeholder="Your Name" formControlName="name" />
                         </div>
 
                         <div class="form-group">
                             <label for="type"><i class="zmdi zmdi-email"></i></label>
-                            <input type="text" name="type" id="type" placeholder="Type of NGO"/>
+                            <input type="text" name="type" id="type" placeholder="Type of NGO" formControlName="type" />
                         </div>
-                        
+
                         <div class="form-group">
                             <label for="email"><i class="zmdi zmdi-email"></i></label>
-                            <input type="email" name="email" id="email" placeholder="Your Email"/>
+                            <input type="email" name="email" id="email" placeholder="Your Email" formControlName="email" />
                         </div>
 
                         <div class="form-group">
                             <label for="contact"><i class="zmdi zmdi-account "></i></label>
-                            <input type="tel" name="contact no" id="contact no" placeholder="Contact Number"/>
+                            <input type="tel" name="contact no" id="contact no" placeholder="Contact Number" formControlName="contact" />
                         </div>
 
                         <div class="form-group">
                             <label for="address"><i class="zmdi zmdi-account "></i></label>
-                            <input type="address" name="address" id="address" placeholder="Address"/>
+                            <input type="address" name="address" id="address" placeholder="Address" formControlName="address" />
                         </div>
 
-                        <div class="form-group">
+                        <mat-form-field>
+                            <mat-label style="font-size: 100%">
+                                State
+                            </mat-label>
+                            <mat-select [(value)]="state" style="font-size: 100%; border-bottom: none">
+                                <div class="zmdi zmdi-account" *ngFor="let s of states">
+                                    <mat-option value="{{ s.payload.doc.data().Name}}" class="options">
+                                        {{ s.payload.doc.data().Name }}</mat-option>
+                                </div>
+                            </mat-select>
+                        </mat-form-field>
+                        <!-- <div class="form-group">
                             <label for="state"><i class="zmdi zmdi-account "></i></label>
                             <input type="text" name="state" id="state" placeholder="State"/>
+                        </div> -->
+
+                        <div (click)="submit()" class="form-group form-button">
+                            submit
                         </div>
-               
-                        <div class="form-group form-button">
-                            <input type="submit" name="register" id="register" class="form-submit" value="Submit"/>
-                        </div>
-                        
-                    
+
+
                     </form>
                 </div>
-                
+
             </div>
         </div>
     </section>
