--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,13 +22,13 @@
                     <li class="drop-down"><a href="">Register</a>
                         <ul class="ddul">
                             <li><a (click)="goToPage('registerngo')">NGO</a></li>
-                            <li><a href="#">Individual</a></li>
-                            <li><a href="#">University or College Club</a></li>
+                            <li><a (click)="goToPage('Registerindividual')">Individual</a></li>
+                            <li><a (click)="goToPage('Registerclub')">University or College Club</a></li>
                         </ul>
                     </li>
                     <li class="drop-down"><a href="">Search</a>
                         <ul class="ddul">
-                            <li><a (click)="goToPage('searchuser')" >Pople registered</a></li>
+                            <li><a (click)="goToPage('searchuser')" >People registered</a></li>
                             <li><a (click)="goToPage('searchNGO')" >Nearby Registered NGO</a></li>
                             <li><a (click)="goToPage('searchclub')">Nearby University or College Club</a></li>
                         </ul>
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="col-md-6 intro-img order-md-last order-first">
-                    <img src="img/intro-img.svg" alt="" class="img-fluid">
+                    <img src="../../assets/img/Screenshot__322_-removebg-previe.png" alt="" class="img-fluid">
                 </div>
             </div>
 
@@ -81,7 +81,7 @@
 
                     <div class="col-lg-5 col-md-6">
                         <div class="about-img">
-                            <img src="" alt="">
+                            <img src="../../assets/img/aboutus.png" alt="">
                         </div>
                     </div>
 
@@ -93,8 +93,8 @@
                                 the actions of emerging youth. <br>We have initiated this project to create a one-stop solution for users which includees</h3>
                             <ul>
                                 <li> Search nearby NGO who are willing to accept donations or in need of volunteers</li>
-                                <li> Register to provide a donation or to help as a volunteer </li>
-                                <li> Register as a University or College social welfare club wanting to collaborate to enable social change. </li>
+                                <li> Registered NGO'S/USERS/clubs will be displayed </li>
+                               
                             </ul>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
 
                 <div class="row feature-item">
                     <div class="col-lg-6 wow fadeInUp">
-                        <img src="" class="img-fluid" alt="">
+                        <img src="../../assets/img/searchnearby.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
                         <h4><br><br><br><br> Search nearby </h4>
@@ -158,7 +158,7 @@
 
                 <div class="row feature-item mt-5 pt-5">
                     <div class="col-lg-6 wow fadeInUp order-1 order-lg-2">
-                        <img src="./img/indi_register.png" class="img-fluid" alt="">
+                        <img src="../../assets/img/indi_reg.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1">
                         <h4> <br> <br><br><br> Register as an individual</h4>
