--- a/src/app/searchngo/searchngo.component.html
+++ b/src/app/searchngo/searchngo.component.html
@@ -28,15 +28,27 @@
                     <a> NGO Name</a>
                     <div>{{ngo.payload.doc.data().name}}</div>
                 </div>
-                
+
                 <div class="title">
-                    <a> NGO State</a>
-                    <div>{{ngo.payload.doc.data().name}}</div>
+                    <a> NGO TYPE</a>
+                    <div>{{ngo.payload.doc.data().type}}</div>
                 </div>
 
                 <div class="title">
-                    <a> NGO Email</a>
-                    <div>{{ngo.payload.doc.data().name}}</div>
+                    <a> NGO EMAIL</a>
+                    <div>{{ngo.payload.doc.data().email}}</div>
+                </div>
+                <div class="title">
+                    <a> NGO CONTACT</a>
+                    <div>{{ngo.payload.doc.data().contact}}</div>
+                </div>
+                <div class="title">
+                    <a> NGO ADDRESS</a>
+                    <div>{{ngo.payload.doc.data().address}}</div>
+                </div>
+                <div class="title">
+                    <a> NGO STATE</a>
+                    <div>{{ngo.payload.doc.data().state}}</div>
                 </div>
     
            
