--- a/src/app/registerngo/registern-ngo.component.html
+++ b/src/app/registerngo/registern-ngo.component.html
@@ -10,7 +10,8 @@
 
                         <div class="form-group">
                             <label for="your_name"><i class="zmdi zmdi-account "></i></label>
-                            <input type="text" name="your_name" id="your_name" placeholder="Your Name" formControlName="name" />
+                            <input type="text" name="your_name" id="your_name" placeholder="Your Name"
+                                formControlName="name" />
                         </div>
 
                         <div class="form-group">
@@ -20,17 +21,20 @@
 
                         <div class="form-group">
                             <label for="email"><i class="zmdi zmdi-email"></i></label>
-                            <input type="email" name="email" id="email" placeholder="Your Email" formControlName="email" />
+                            <input type="email" name="email" id="email" placeholder="Your Email"
+                                formControlName="email" />
                         </div>
 
                         <div class="form-group">
                             <label for="contact"><i class="zmdi zmdi-account "></i></label>
-                            <input type="tel" name="contact no" id="contact no" placeholder="Contact Number" formControlName="contact" />
+                            <input type="tel" name="contact no" id="contact no" placeholder="Contact Number"
+                                formControlName="contact" />
                         </div>
 
                         <div class="form-group">
                             <label for="address"><i class="zmdi zmdi-account "></i></label>
-                            <input type="address" name="address" id="address" placeholder="Address" formControlName="address" />
+                            <input type="address" name="address" id="address" placeholder="Address"
+                                formControlName="address" />
                         </div>
 
                         <mat-form-field>
@@ -41,6 +45,14 @@
                                 <div class="zmdi zmdi-account" *ngFor="let s of states">
                                     <mat-option value="{{ s.payload.doc.data().Name}}" class="options">
                                         {{ s.payload.doc.data().Name }}</mat-option>
+                                    <mat-option value="{{ s.payload.doc.data().type}}" class="options">
+                                        {{ s.payload.doc.data().type }}</mat-option>
+                                    <mat-option value="{{ s.payload.doc.data().email}}" class="options">
+                                        {{ s.payload.doc.data().email }}</mat-option>
+                                    <mat-option value="{{ s.payload.doc.data().contact}}" class="options">
+                                        {{ s.payload.doc.data().contact }}</mat-option>
+                                    <mat-option value="{{ s.payload.doc.data().address}}" class="options">
+                                        {{ s.payload.doc.data().address }}</mat-option>
                                 </div>
                             </mat-select>
                         </mat-form-field>
