--- a/src/app/searchngo/searchngo.component.scss
+++ b/src/app/searchngo/searchngo.component.scss
@@ -42,12 +42,13 @@
     }
 
     button {
-        margin-top: 40px;
-        margin-bottom: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
         background-color: white;
         border: 1px solid black;
-        border-radius: 5px;
-        padding: 10px;
+        border-radius: 15px;
+        padding: 20px;
+        width: 10;
     }
 
     button:hover {
@@ -69,8 +70,9 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background-image: url("../../assets/img/searchbg\ \(1\).jpg");
+        background-image: url("../../assets/img/images\ \(8\).jpg");
         background-size: 100% 100%;
+       
     }
     
     .searchandfilter {
@@ -80,11 +82,14 @@
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
+        border-radius: 15px;
+
     }
     
     mat-form-field{
         background-color: white;
         padding : 0%2%;
         width : 50vw;
+        border-radius: 15px;
     }
     
